[package]
name = "raug-macros"
license = "MIT OR Apache-2.0"
version = "0.0.4"
edition = "2021"
documentation = "https://docs.rs/raug"
repository = "https://github.com/clstatham/raug"
description = "Procedural macros for Raug, a Rusty Audio Graph crate"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
